# OTUS_HW2

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/otus_hw2/advanced/: buffer.py  callable_protocol.py  decorator.py  descriptor.py  forward.py  generator.py  generic_class.py  never.py  never2.py  overload.py  overload2.py  paramspec.py  protocol.py  recursive.py  type.py  typed_dict.py  typeguard.py  typeshred.py  variadic_generics.py
src/otus_hw2/basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tuple.py  typealias.py  union.py  variable.py
src/otus_hw2/extreme/: concatenate.py  constructor.py  self_casting.py  variance.py
