[project]
name = "otus-hw2"
version = "0.1.0"
description = ""
authors = [
    {name = "PleaseMePython",email = "Please.Me.Python@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "otus_hw2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
